--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "npm test -- --watchAll=false --coverage --verbose",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
