--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,10 +28,12 @@ steps:
   #     platformIndependent: true
   - task: Cache@2
     inputs:
-      key: 'package-lock.json'
+      key: 'npm | "$(Agent.OS)" | package-lock.json'
       path: $(Pipeline.Workspace)/.npm
     displayName: Cache NPM packages
-  - script: npm ci
+  - script: | 
+      npm ci
+      echo "$(npm_config_cache)"
     displayName: NPM Install Dependencies
     # condition: ne(variables['CacheRestored'], 'true')
   - script: npm run lint
