Removed unnecessary code

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,14 +32,13 @@ steps:
   #     platformIndependent: true
   - task: Cache@2
     inputs:
-      key: 'npm | "$(Agent.OS)" | package-lock.json'
-      restoreKeys: |
-        npm | "$(Agent.OS)"
+      key: 'package-lock.json'
       path: $(npm_config_cache)
     displayName: Cache NPM packages
   - script: | 
       npm ci --cache $(npm_config_cache)
     displayName: NPM Install Dependencies
+    # You need to set --cache explicitly, because the default location on POSIX systems is ~/.npm, which can't be accessed in a build agent as far as I know
   - script: |
       npm cache ls
       npm cache verify
