--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
       path: $(npm_config_cache)
     displayName: Cache NPM packages
   - script: | 
-      npm ci --cache $(npm_config_cache) --prefer-offline
+      npm ci --cache $(npm_config_cache)
     displayName: NPM Install Dependencies
     # You need to set --cache explicitly, because the default location on POSIX systems is ~/.npm, which can't be accessed in a build agent as far as I know
   - script: |
