--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  npm_config_cache: $(Pipeline.Workspace)/.npm
+  npm_config_cache: 'C:/hostedtoolcache/windows/.npm'
 
 steps:
   - task: Cache@2
